--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-psutil = "3.2.1"
+clearscreen = "2.0.1"
+sysinfo = "0.29.0"
+termsize = "0.1"
